src/objects/Week_Template__c.object
<CustomObject>
    <description>Time Tracking App Object</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Week Templates</relationshipLabel>
        <relationshipName>Week_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Hour_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Week Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TL-{0000000}</displayFormat>
        <label>Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Week Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>